--- a/FunctionAppHeadless/FunctionAppHeadless.csproj
+++ b/FunctionAppHeadless/FunctionAppHeadless.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup Label="Globals">
 		<SccProjectName>SAK</SccProjectName>
 		<SccProvider>SAK</SccProvider>
@@ -15,9 +15,7 @@
 		<PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.33" />
 		<PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.33" />
 		<PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.3" />
-		<PackageReference Include="NUnit" Version="3.13.3" />
-		<PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-		<PackageReference Include="NUnitTestAdapter" Version="2.3.0" />
+		<PackageReference Include="Microsoft.Playwright" Version="1.27.2" />
 		<PackageReference Include="RestSharp" Version="108.0.2" />
 		<PackageReference Include="Selenium.WebDriver" Version="4.5.1" />
 		<PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="107.0.5304.6200" />
